--- a/src/less/_mixin.less
+++ b/src/less/_mixin.less
@@ -16,8 +16,8 @@
 	background-position: center center;
 }
 .bgImg(@url, @suffix: ".png") {
-	background-image: url("../../../static/img/@{url}_@2x@{suffix}");
+	background-image: url("../../../static/@{url}_@2x@{suffix}");
 	[data-dpr = "3"] & {
-		background-image: url("../../../static/img/@{url}_@3x@{suffix}");
+		background-image: url("../../../static/@{url}_@3x@{suffix}");
 	}  
-} 
+}
